# vkDeferredRenderer

./: CMakeCache.txt  CMakeLists.txt  Descriptor.cpp  Descriptor.h  FrameBuffer.cpp  Makefile  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  Renderer.cpp  Renderer.h  Widget.cpp  Widget.h  main.cpp  vulkaninfo.html
.cache/clangd/index/: Descriptor.cpp.273A7B037A481958.idx  FrameBuffer.cpp.159E882233EA2595.idx  Mesh.cpp.A2D3A324B04C7414.idx  Mesh.h.E3ACAEFF898153D3.idx  Pipeline.cpp.03EA5C8B20056843.idx  Pipeline.h.68A7D5738B0F9EC3.idx  RenderPass.cpp.C52B3986C9108382.idx  Renderer.cpp.B41E2178FD914C02.idx  Renderer.h.2F797E27CD6F6A81.idx  Widget.cpp.8299846F90BCEA73.idx  Widget.h.3CAAF5499153E550.idx  main.cpp.9D6195B3507958B9.idx
Models/: Cube.dae
Shaders/: 3Dvert.spv  3Dvert.vert  Shader.frag  Shader.vert  UIfrag.frag  UIfrag.spv  UIvert.spv  UIvert.vert  Vert.spv  cs.sh
